--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Funtours
-email: your-email@domain.com
+email: 210300304@ucaribe.edu.mx
 author: CorcueraFuntours
 
 # Copyright setting
