--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ yat:
 
 # You can choose a theme color
 # Default theme colors as below:
-# coolblack: #090a0b
+#  night_mode: "on": #090a0b
 # spacegrey: #353535
 # snowwhite: #ffffff
 #
@@ -120,7 +120,7 @@ yat:
 # Custom color as below:
 # brand_color: "#1a8e42"
 
-# Night/Dark mode
+# Night/Dark mode on
 # Default mode is "auto", "auto" is for auto nightshift
 # (19:00 - 07:00), "manual" is for manual toggle, and
 # "on/off" is for default on/off.
@@ -131,7 +131,7 @@ yat:
 # it will be always kept on every visit (i.e. no matter
 # the browser is closed or not)
 #
-# night_mode: "auto"
+# night_mode: "on"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
