--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# Welcome to Jekyll!
-#
+# Welcome to funtours de cancun!
+#Bienvenido a esta pagina en donde encontraras los mejores tours de cancun 
 # About Theme
 #
 # Yet another theme for elegant writers with modern flat style and beautiful
