--- a/_config.yml
+++ b/_config.yml
@@ -185,7 +185,7 @@ yat:
 
 # Gitment comments
 # gitment:
-#   username: "Your GitHub username"
+#   username: CorcueraFuntours 
 #   repo: "The repo to store comments"
 #   client_id: "Your client ID"
 #   client_secret: "Your client secret"
